[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Scripts/Menus/LevelSelectMenu/LevelSelectMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/MainMenu/TitleLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/MainMenu/background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scenes/UI/UITransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Styles/MenuButtonPressedStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Scripts/Menus/MainMenu/BackButton.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/MainMenu/back.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="LevelSelectMenu" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -269.0
margin_right = 2371.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="LevelsContainer" type="VBoxContainer" parent="."]
margin_left = 1000.0
margin_top = 150.0
margin_right = 1040.0
margin_bottom = 190.0
rect_min_size = Vector2( 700, 0 )

[node name="UITransition" parent="LevelsContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 700.0
margin_bottom = 0.0
hidden_relative_position = Vector2( 2000, 0 )

[node name="WITH" parent="." instance=ExtResource( 2 )]
text = "LEVEL"
content = "LEVEL"
underline_color = Color( 0.0627451, 0.92549, 1, 1 )
underline_shadow_color = Color( 0, 0.776471, 0.843137, 1 )

[node name="UITransition" parent="WITH" instance=ExtResource( 4 )]
hidden_relative_position = Vector2( -900, 0 )

[node name="FLYING" parent="." instance=ExtResource( 2 )]
margin_top = 250.0
margin_right = 935.0
margin_bottom = 274.0
text = "SELECT"
content = "SELECT"
underline_color = Color( 0.843137, 1, 0.219608, 1 )
underline_shadow_color = Color( 0.717647, 0.898039, 0, 1 )

[node name="UITransition" parent="FLYING" instance=ExtResource( 4 )]
delay = 0.5
hidden_relative_position = Vector2( -900, 0 )

[node name="BackButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 900.0
margin_right = 180.0
margin_bottom = 997.0
focus_mode = 0
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
script = ExtResource( 6 )

[node name="UITransition" parent="BackButton" instance=ExtResource( 4 )]
delay = 0.5
hidden_relative_position = Vector2( -500, 0 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
